<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GymnsMovie</string>
    <string name="login_text">Masuk</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register_txt">Daftar</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_konfirmasi_password">Masukkan Konfirmasi Password</string>
    <string name="home">Home</string>
    <string name="welcome">Hi, Ridho Gymnastiar!</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="update">Update</string>
    <string name="logout">Keluar</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release">Movie Release</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="description">Description</string>
</resources>